# rag-system

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
rag_system/: __init__.py
rag_system/api/: __init__.py  main.py  schemas.py
rag_system/api/routes/: __init__.py  ingest.py  query.py
rag_system/core/: __init__.py  config.py  interfaces.py  logger.py  models.py
rag_system/evaluation/: __init__.py  generate_test_cases.py  metrics.py  ragas_eval.py
rag_system/ingestion/: __init__.py  run_ingestion.py
rag_system/ingestion/chunkers/: __init__.py  base.py  paragraph_chunker.py  table_chunker.py
rag_system/ingestion/cleaners/: __init__.py  text_cleaner.py
rag_system/ingestion/embedders/: __init__.py  bge_embedder.py
rag_system/ingestion/parsers/: __init__.py  base.py  csv_parser.py  docx_parser.py  factory.py  html_parser.py  pdf_parser.py  xlsx_parser.py
rag_system/ingestion/vector_store/: __init__.py  base.py  chroma_store.py
rag_system/retrieval/: __init__.py  pipeline.py
rag_system/retrieval/generator/: __init__.py  base.py  groq_llm.py  ollama_llm.py  prompt_builder.py
rag_system/retrieval/reranker/: __init__.py  bge_reranker.py
rag_system/retrieval/search/: __init__.py  bm25_search.py  hybrid_search.py  vector_search.py
rag_system/tests/: __init__.py
rag_system/tests/integration/: __init__.py  conftest.py  test_api_endpoints.py  test_ingestion_flow.py  test_retrieval_flow.py
rag_system/tests/unit/: __init__.py  conftest.py  (+8 more)
scripts/: add_headers.sh  generate_snapshot.sh
